--- a/index.html
+++ b/index.html
@@ -346,7 +346,7 @@
       <h2>Anleitung</h2>
       <p>Willkommen zur E2a-Additionsübung!</p>
       <p><strong>Spielprinzip:</strong> Zwei Zahlen werden angezeigt. Deine Aufgabe ist es diese zu addieren und die letzte Ziffer der Summe per Tastendruck einzugeben. Merke dir immer die untere Zahl, da du diese anschließend wieder mit der neu generierten Zahl addieren und eingeben musst.</p>
-      <p><strong>Test Modus:</strong> Du kannst vor Übungsbeginn die Übungsdauer selbst festlegen. Beim E2a-Aufnahmetest beträgt die Dauer 20 Minuten und der Ziffernblock dasrf zur Eingabe nicht verwendet werden.</p>
+      <p><strong>Test Modus:</strong> Du kannst vor Übungsbeginn die Übungsdauer selbst festlegen. Beim E2a-Aufnahmetest beträgt die Dauer 20 Minuten und der Ziffernblock darf zur Eingabe nicht verwendet werden.</p>
       <p><strong>Freier Modus:</strong> Es gibt keine Zeitbegrenzung. Stattdessen wird die Trainingszeit angezeigt, während du addierst.</p>
       <p>Viel Spaß beim Üben!</p>
     </div>
